# svt-scraper-rs

./: Cargo.toml
.github/workflows/: release.yml
src/: crawler.rs  error.rs  lib.rs  main.rs
src/spiders/: mod.rs  svt.rs
src/spiders/svt/: domain.rs
