[package]
name = "svt-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
async_trait = "*"
reqwest = { version = "^0.11", features = ["json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
