[package]
name = "svt-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
async-trait = "*"
reqwest = { version = "^0.11", features = ["json", "rustls-tls-native-roots"], default-features = false }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
lazy_static = "^1"
tokio = { version = "1.18.2", default-features = false, features = ["macros", "rt-multi-thread"] }
